k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky
spec:
  type: LoadBalancer
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
